src/lr/test/ansi_c/ansi-c.yacc.output

state 0
	$accept: .translation_unit $end 

	IDENTIFIER  shift 32
	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	'('  shift 33
	'*'  shift 31
	.  error

	translation_unit  goto 1
	declaration  goto 4
	declaration_specifiers  goto 5
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	declarator  goto 6
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34
	pointer  goto 10
	direct_declarator  goto 11
	external_declaration  goto 2
	function_definition  goto 3

state 1
	$accept:  translation_unit.$end 
	translation_unit:  translation_unit.external_declaration 

	$end  accept
	IDENTIFIER  shift 32
	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	'('  shift 33
	'*'  shift 31
	.  error

	declaration  goto 4
	declaration_specifiers  goto 5
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	declarator  goto 6
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34
	pointer  goto 10
	direct_declarator  goto 11
	external_declaration  goto 38
	function_definition  goto 3

state 2
	translation_unit:  external_declaration.    (204)

	.  reduce 204 (src line 407)


state 3
	external_declaration:  function_definition.    (206)

	.  reduce 206 (src line 412)


state 4
	external_declaration:  declaration.    (207)

	.  reduce 207 (src line 414)


state 5
	declaration:  declaration_specifiers.';' 
	declaration:  declaration_specifiers.init_declarator_list ';' 
	function_definition:  declaration_specifiers.declarator declaration_list compound_statement 
	function_definition:  declaration_specifiers.declarator compound_statement 

	IDENTIFIER  shift 32
	'('  shift 33
	'*'  shift 31
	';'  shift 39
	.  error

	init_declarator_list  goto 40
	init_declarator  goto 42
	declarator  goto 41
	pointer  goto 10
	direct_declarator  goto 11

state 6
	function_definition:  declarator.declaration_list compound_statement 
	function_definition:  declarator.compound_statement 

	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	'{'  shift 46
	.  error

	declaration  goto 45
	declaration_specifiers  goto 47
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34
	compound_statement  goto 44
	declaration_list  goto 43

state 7
	declaration_specifiers:  storage_class_specifier.    (77)
	declaration_specifiers:  storage_class_specifier.declaration_specifiers 

	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	.  reduce 77 (src line 165)

	declaration_specifiers  goto 48
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34

state 8
	declaration_specifiers:  type_specifier.    (79)
	declaration_specifiers:  type_specifier.declaration_specifiers 

	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	.  reduce 79 (src line 168)

	declaration_specifiers  goto 49
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34

state 9
	declaration_specifiers:  type_qualifier.    (81)
	declaration_specifiers:  type_qualifier.declaration_specifiers 

	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	.  reduce 81 (src line 170)

	declaration_specifiers  goto 50
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34

state 10
	declarator:  pointer.direct_declarator 

	IDENTIFIER  shift 32
	'('  shift 33
	.  error

	direct_declarator  goto 51

state 11
	declarator:  direct_declarator.    (131)
	direct_declarator:  direct_declarator.'[' constant_expression ']' 
	direct_declarator:  direct_declarator.'[' ']' 
	direct_declarator:  direct_declarator.'(' parameter_type_list ')' 
	direct_declarator:  direct_declarator.'(' identifier_list ')' 
	direct_declarator:  direct_declarator.'(' ')' 

	'('  shift 53
	'['  shift 52
	.  reduce 131 (src line 268)


state 12
	storage_class_specifier:  TYPEDEF.    (87)

	.  reduce 87 (src line 184)


state 13
	storage_class_specifier:  EXTERN.    (88)

	.  reduce 88 (src line 186)


state 14
	storage_class_specifier:  STATIC.    (89)

	.  reduce 89 (src line 187)


state 15
	storage_class_specifier:  AUTO.    (90)

	.  reduce 90 (src line 188)


state 16
	storage_class_specifier:  REGISTER.    (91)

	.  reduce 91 (src line 189)


state 17
	type_specifier:  VOID.    (92)

	.  reduce 92 (src line 192)


state 18
	type_specifier:  CHAR.    (93)

	.  reduce 93 (src line 194)


state 19
	type_specifier:  SHORT.    (94)

	.  reduce 94 (src line 195)


state 20
	type_specifier:  INT.    (95)

	.  reduce 95 (src line 196)


state 21
	type_specifier:  LONG.    (96)

	.  reduce 96 (src line 197)


state 22
	type_specifier:  FLOAT.    (97)

	.  reduce 97 (src line 198)


state 23
	type_specifier:  DOUBLE.    (98)

	.  reduce 98 (src line 199)


state 24
	type_specifier:  SIGNED.    (99)

	.  reduce 99 (src line 200)


state 25
	type_specifier:  UNSIGNED.    (100)

	.  reduce 100 (src line 201)


state 26
	type_specifier:  struct_or_union_specifier.    (101)

	.  reduce 101 (src line 202)


state 27
	type_specifier:  enum_specifier.    (102)

	.  reduce 102 (src line 203)


state 28
	type_specifier:  TYPE_NAME.    (103)

	.  reduce 103 (src line 204)


state 29
	type_qualifier:  CONST.    (128)

	.  reduce 128 (src line 261)


state 30
	type_qualifier:  VOLATILE.    (129)

	.  reduce 129 (src line 263)


state 31
	pointer:  '*'.    (139)
	pointer:  '*'.type_qualifier_list 
	pointer:  '*'.pointer 
	pointer:  '*'.type_qualifier_list pointer 

	CONST  shift 29
	VOLATILE  shift 30
	'*'  shift 31
	.  reduce 139 (src line 281)

	type_qualifier  goto 56
	pointer  goto 55
	type_qualifier_list  goto 54

state 32
	direct_declarator:  IDENTIFIER.    (132)

	.  reduce 132 (src line 271)


state 33
	direct_declarator:  '('.declarator ')' 

	IDENTIFIER  shift 32
	'('  shift 33
	'*'  shift 31
	.  error

	declarator  goto 57
	pointer  goto 10
	direct_declarator  goto 11

state 34
	struct_or_union_specifier:  struct_or_union.IDENTIFIER '{' struct_declaration_list '}' 
	struct_or_union_specifier:  struct_or_union.'{' struct_declaration_list '}' 
	struct_or_union_specifier:  struct_or_union.IDENTIFIER 

	IDENTIFIER  shift 58
	'{'  shift 59
	.  error


state 35
	enum_specifier:  ENUM.'{' enumerator_list '}' 
	enum_specifier:  ENUM.IDENTIFIER '{' enumerator_list '}' 
	enum_specifier:  ENUM.IDENTIFIER 

	IDENTIFIER  shift 61
	'{'  shift 60
	.  error


state 36
	struct_or_union:  STRUCT.    (107)

	.  reduce 107 (src line 213)


state 37
	struct_or_union:  UNION.    (108)

	.  reduce 108 (src line 215)


state 38
	translation_unit:  translation_unit external_declaration.    (205)

	.  reduce 205 (src line 409)


state 39
	declaration:  declaration_specifiers ';'.    (75)

	.  reduce 75 (src line 160)


state 40
	declaration:  declaration_specifiers init_declarator_list.';' 
	init_declarator_list:  init_declarator_list.',' init_declarator 

	','  shift 63
	';'  shift 62
	.  error


state 41
	init_declarator:  declarator.    (85)
	init_declarator:  declarator.'=' initializer 
	function_definition:  declaration_specifiers declarator.declaration_list compound_statement 
	function_definition:  declaration_specifiers declarator.compound_statement 

	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	'='  shift 64
	'{'  shift 46
	.  reduce 85 (src line 179)

	declaration  goto 45
	declaration_specifiers  goto 47
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34
	compound_statement  goto 66
	declaration_list  goto 65

state 42
	init_declarator_list:  init_declarator.    (83)

	.  reduce 83 (src line 174)


state 43
	declaration_list:  declaration_list.declaration 
	function_definition:  declarator declaration_list.compound_statement 

	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	'{'  shift 46
	.  error

	declaration  goto 67
	declaration_specifiers  goto 47
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34
	compound_statement  goto 68

state 44
	function_definition:  declarator compound_statement.    (211)

	.  reduce 211 (src line 421)


state 45
	declaration_list:  declaration.    (186)

	.  reduce 186 (src line 371)


state 46
	compound_statement:  '{'.'}' 
	compound_statement:  '{'.statement_list '}' 
	compound_statement:  '{'.declaration_list '}' 
	compound_statement:  '{'.declaration_list statement_list '}' 

	IDENTIFIER  shift 79
	CONSTANT  shift 111
	STRING_LITERAL  shift 112
	SIZEOF  shift 101
	INC_OP  shift 98
	DEC_OP  shift 99
	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	CASE  shift 80
	DEFAULT  shift 81
	IF  shift 84
	SWITCH  shift 85
	WHILE  shift 86
	DO  shift 87
	FOR  shift 88
	GOTO  shift 89
	CONTINUE  shift 90
	BREAK  shift 91
	RETURN  shift 92
	'('  shift 113
	'&'  shift 104
	'*'  shift 105
	'+'  shift 106
	'-'  shift 107
	'~'  shift 108
	'!'  shift 109
	';'  shift 82
	'{'  shift 46
	'}'  shift 69
	.  error

	primary_expression  goto 103
	expression  goto 83
	postfix_expression  goto 97
	assignment_expression  goto 93
	unary_expression  goto 95
	unary_operator  goto 100
	cast_expression  goto 121
	multiplicative_expression  goto 120
	additive_expression  goto 119
	shift_expression  goto 118
	relational_expression  goto 117
	equality_expression  goto 116
	and_expression  goto 115
	exclusive_or_expression  goto 114
	inclusive_or_expression  goto 110
	logical_and_expression  goto 102
	logical_or_expression  goto 96
	conditional_expression  goto 94
	declaration  goto 45
	declaration_specifiers  goto 47
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34
	statement  goto 72
	labeled_statement  goto 73
	compound_statement  goto 74
	expression_statement  goto 75
	selection_statement  goto 76
	iteration_statement  goto 77
	jump_statement  goto 78
	statement_list  goto 70
	declaration_list  goto 71

state 47
	declaration:  declaration_specifiers.';' 
	declaration:  declaration_specifiers.init_declarator_list ';' 

	IDENTIFIER  shift 32
	'('  shift 33
	'*'  shift 31
	';'  shift 39
	.  error

	init_declarator_list  goto 40
	init_declarator  goto 42
	declarator  goto 122
	pointer  goto 10
	direct_declarator  goto 11

state 48
	declaration_specifiers:  storage_class_specifier declaration_specifiers.    (78)

	.  reduce 78 (src line 167)


state 49
	declaration_specifiers:  type_specifier declaration_specifiers.    (80)

	.  reduce 80 (src line 169)


state 50
	declaration_specifiers:  type_qualifier declaration_specifiers.    (82)

	.  reduce 82 (src line 171)


state 51
	declarator:  pointer direct_declarator.    (130)
	direct_declarator:  direct_declarator.'[' constant_expression ']' 
	direct_declarator:  direct_declarator.'[' ']' 
	direct_declarator:  direct_declarator.'(' parameter_type_list ')' 
	direct_declarator:  direct_declarator.'(' identifier_list ')' 
	direct_declarator:  direct_declarator.'(' ')' 

	'('  shift 53
	'['  shift 52
	.  reduce 130 (src line 266)


state 52
	direct_declarator:  direct_declarator '['.constant_expression ']' 
	direct_declarator:  direct_declarator '['.']' 

	IDENTIFIER  shift 127
	CONSTANT  shift 111
	STRING_LITERAL  shift 112
	SIZEOF  shift 101
	INC_OP  shift 98
	DEC_OP  shift 99
	'('  shift 113
	']'  shift 124
	'&'  shift 104
	'*'  shift 105
	'+'  shift 106
	'-'  shift 107
	'~'  shift 108
	'!'  shift 109
	.  error

	primary_expression  goto 103
	postfix_expression  goto 97
	unary_expression  goto 126
	unary_operator  goto 100
	cast_expression  goto 121
	multiplicative_expression  goto 120
	additive_expression  goto 119
	shift_expression  goto 118
	relational_expression  goto 117
	equality_expression  goto 116
	and_expression  goto 115
	exclusive_or_expression  goto 114
	inclusive_or_expression  goto 110
	logical_and_expression  goto 102
	logical_or_expression  goto 96
	conditional_expression  goto 125
	constant_expression  goto 123

state 53
	direct_declarator:  direct_declarator '('.parameter_type_list ')' 
	direct_declarator:  direct_declarator '('.identifier_list ')' 
	direct_declarator:  direct_declarator '('.')' 

	IDENTIFIER  shift 132
	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	')'  shift 130
	.  error

	declaration_specifiers  goto 134
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34
	parameter_type_list  goto 128
	identifier_list  goto 129
	parameter_list  goto 131
	parameter_declaration  goto 133

state 54
	pointer:  '*' type_qualifier_list.    (140)
	pointer:  '*' type_qualifier_list.pointer 
	type_qualifier_list:  type_qualifier_list.type_qualifier 

	CONST  shift 29
	VOLATILE  shift 30
	'*'  shift 31
	.  reduce 140 (src line 283)

	type_qualifier  goto 136
	pointer  goto 135

state 55
	pointer:  '*' pointer.    (141)

	.  reduce 141 (src line 284)


state 56
	type_qualifier_list:  type_qualifier.    (143)

	.  reduce 143 (src line 288)


state 57
	direct_declarator:  '(' declarator.')' 

	')'  shift 137
	.  error


state 58
	struct_or_union_specifier:  struct_or_union IDENTIFIER.'{' struct_declaration_list '}' 
	struct_or_union_specifier:  struct_or_union IDENTIFIER.    (106)

	'{'  shift 138
	.  reduce 106 (src line 210)


state 59
	struct_or_union_specifier:  struct_or_union '{'.struct_declaration_list '}' 

	TYPE_NAME  shift 28
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	.  error

	type_specifier  goto 142
	type_qualifier  goto 143
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34
	struct_declaration_list  goto 139
	struct_declaration  goto 140
	specifier_qualifier_list  goto 141

state 60
	enum_specifier:  ENUM '{'.enumerator_list '}' 

	IDENTIFIER  shift 146
	.  error

	enumerator_list  goto 144
	enumerator  goto 145

state 61
	enum_specifier:  ENUM IDENTIFIER.'{' enumerator_list '}' 
	enum_specifier:  ENUM IDENTIFIER.    (123)

	'{'  shift 147
	.  reduce 123 (src line 248)


state 62
	declaration:  declaration_specifiers init_declarator_list ';'.    (76)

	.  reduce 76 (src line 162)


state 63
	init_declarator_list:  init_declarator_list ','.init_declarator 

	IDENTIFIER  shift 32
	'('  shift 33
	'*'  shift 31
	.  error

	init_declarator  goto 148
	declarator  goto 122
	pointer  goto 10
	direct_declarator  goto 11

state 64
	init_declarator:  declarator '='.initializer 

	IDENTIFIER  shift 127
	CONSTANT  shift 111
	STRING_LITERAL  shift 112
	SIZEOF  shift 101
	INC_OP  shift 98
	DEC_OP  shift 99
	'('  shift 113
	'&'  shift 104
	'*'  shift 105
	'+'  shift 106
	'-'  shift 107
	'~'  shift 108
	'!'  shift 109
	'{'  shift 151
	.  error

	primary_expression  goto 103
	postfix_expression  goto 97
	assignment_expression  goto 150
	unary_expression  goto 95
	unary_operator  goto 100
	cast_expression  goto 121
	multiplicative_expression  goto 120
	additive_expression  goto 119
	shift_expression  goto 118
	relational_expression  goto 117
	equality_expression  goto 116
	and_expression  goto 115
	exclusive_or_expression  goto 114
	inclusive_or_expression  goto 110
	logical_and_expression  goto 102
	logical_or_expression  goto 96
	conditional_expression  goto 94
	initializer  goto 149

state 65
	declaration_list:  declaration_list.declaration 
	function_definition:  declaration_specifiers declarator declaration_list.compound_statement 

	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	'{'  shift 46
	.  error

	declaration  goto 67
	declaration_specifiers  goto 47
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34
	compound_statement  goto 152

state 66
	function_definition:  declaration_specifiers declarator compound_statement.    (209)

	.  reduce 209 (src line 419)


state 67
	declaration_list:  declaration_list declaration.    (187)

	.  reduce 187 (src line 373)


state 68
	function_definition:  declarator declaration_list compound_statement.    (210)

	.  reduce 210 (src line 420)


state 69
	compound_statement:  '{' '}'.    (182)

	.  reduce 182 (src line 364)


state 70
	compound_statement:  '{' statement_list.'}' 
	statement_list:  statement_list.statement 

	IDENTIFIER  shift 79
	CONSTANT  shift 111
	STRING_LITERAL  shift 112
	SIZEOF  shift 101
	INC_OP  shift 98
	DEC_OP  shift 99
	CASE  shift 80
	DEFAULT  shift 81
	IF  shift 84
	SWITCH  shift 85
	WHILE  shift 86
	DO  shift 87
	FOR  shift 88
	GOTO  shift 89
	CONTINUE  shift 90
	BREAK  shift 91
	RETURN  shift 92
	'('  shift 113
	'&'  shift 104
	'*'  shift 105
	'+'  shift 106
	'-'  shift 107
	'~'  shift 108
	'!'  shift 109
	';'  shift 82
	'{'  shift 46
	'}'  shift 153
	.  error

	primary_expression  goto 103
	expression  goto 83
	postfix_expression  goto 97
	assignment_expression  goto 93
	unary_expression  goto 95
	unary_operator  goto 100
	cast_expression  goto 121
	multiplicative_expression  goto 120
	additive_expression  goto 119
	shift_expression  goto 118
	relational_expression  goto 117
	equality_expression  goto 116
	and_expression  goto 115
	exclusive_or_expression  goto 114
	inclusive_or_expression  goto 110
	logical_and_expression  goto 102
	logical_or_expression  goto 96
	conditional_expression  goto 94
	statement  goto 154
	labeled_statement  goto 73
	compound_statement  goto 74
	expression_statement  goto 75
	selection_statement  goto 76
	iteration_statement  goto 77
	jump_statement  goto 78

state 71
	compound_statement:  '{' declaration_list.'}' 
	compound_statement:  '{' declaration_list.statement_list '}' 
	declaration_list:  declaration_list.declaration 

	IDENTIFIER  shift 79
	CONSTANT  shift 111
	STRING_LITERAL  shift 112
	SIZEOF  shift 101
	INC_OP  shift 98
	DEC_OP  shift 99
	TYPE_NAME  shift 28
	TYPEDEF  shift 12
	EXTERN  shift 13
	STATIC  shift 14
	AUTO  shift 15
	REGISTER  shift 16
	CHAR  shift 18
	SHORT  shift 19
	INT  shift 20
	LONG  shift 21
	SIGNED  shift 24
	UNSIGNED  shift 25
	FLOAT  shift 22
	DOUBLE  shift 23
	CONST  shift 29
	VOLATILE  shift 30
	VOID  shift 17
	STRUCT  shift 36
	UNION  shift 37
	ENUM  shift 35
	CASE  shift 80
	DEFAULT  shift 81
	IF  shift 84
	SWITCH  shift 85
	WHILE  shift 86
	DO  shift 87
	FOR  shift 88
	GOTO  shift 89
	CONTINUE  shift 90
	BREAK  shift 91
	RETURN  shift 92
	'('  shift 113
	'&'  shift 104
	'*'  shift 105
	'+'  shift 106
	'-'  shift 107
	'~'  shift 108
	'!'  shift 109
	';'  shift 82
	'{'  shift 46
	'}'  shift 155
	.  error

	primary_expression  goto 103
	expression  goto 83
	postfix_expression  goto 97
	assignment_expression  goto 93
	unary_expression  goto 95
	unary_operator  goto 100
	cast_expression  goto 121
	multiplicative_expression  goto 120
	additive_expression  goto 119
	shift_expression  goto 118
	relational_expression  goto 117
	equality_expression  goto 116
	and_expression  goto 115
	exclusive_or_expression  goto 114
	inclusive_or_expression  goto 110
	logical_and_expression  goto 102
	logical_or_expression  goto 96
	conditional_expression  goto 94
	declaration  goto 67
	declaration_specifiers  goto 47
	storage_class_specifier  goto 7
	type_specifier  goto 8
	type_qualifier  goto 9
	struct_or_union_specifier  goto 26
	enum_specifier  goto 27
	struct_or_union  goto 34
	statement  goto 72
	labeled_statement  goto 73
	compound_statement  goto 74
	expression_statement  goto 75
	selection_statement  goto 76
	iteration_statement  goto 77
	jump_statement  goto 78
	statement_list  goto 156

state 72
	statement_list:  statement.    (188)

	.  reduce 188 (src line 376)


state 73
	statement:  labeled_statement.    (173)

	.  reduce 173 (src line 349)


state 74
	statement:  compound_statement.    (174)

	.  reduce 174 (src line 351)


state 75
	statement:  expression_statement.    (175)

	.  reduce 175 (src line 352)


state 76
	statement:  selection_statement.    (176)

	.  reduce 176 (src line 353)


state 77
	statement:  iteration_statement.    (177)

	.  reduce 177 (src line 354)


state 78
	statement:  jump_statement.    (178)

	.  reduce 178 (src line 355)


state 79
	primary_expression:  IDENTIFIER.    (1)
	labeled_statement:  IDENTIFIER.':' statement 

	':'  shift 157
	.  reduce 1 (src line 23)


state 80
	labeled_statement:  CASE.constant_expression ':' statement 

	IDENTIFIER  shift 127
	CONSTANT  shift 111
	STRING_LITERAL  shift 112
	SIZEOF  shift 101
	INC_OP  shift 98
	DEC_OP  shift 99
	'('  shift 113
	'&'  shift 104
	'*'  shift 105
	'+'  shift 106
	'-'  shift 107
	'~'  shift 108
	'!'  shift 109
	.  error

	primary_expression  goto 103
	postfix_expression  goto 97
	unary_expression  goto 126
	unary_operator  goto 100
	cast_expression  goto 121
	multiplicative_expression  goto 120
	additive_expression  goto 119
	shift_expression  goto 118
	relational_expression  goto 117
	equality_expression  goto 116
	and_expression  goto 115
	exclusive_or_expression  goto 114
	inclusive_or_expression  goto 110
	logical_and_expression  goto 102
	logical_or_expression  goto 96
	conditional_expression  goto 125
	constant_expression  goto 158

state 81
	labeled_statement:  DEFAULT.':' statement 

	':'  shift 159
	.  error


state 82
	expression_statement:  ';'.    (190)

	.  reduce 190 (src line 381)


state 83
	expression:  expression.',' assignment_expression 
	expression_statement:  expression.';' 

	','  shift 160
	';'  shift 161
	.  error


state 84
	selection_statement:  IF.'(' expression ')' statement 
	selection_statement:  IF.'(' expression ')' statement ELSE statement 

	'('  shift 162
	.  error


state 85
	selection_statement:  SWITCH.'(' expression ')' statement 

	'('  shift 163
	.  error


state 86
	iteration_statement:  WHILE.'(' expression ')' statement 

	'('  shift 164
	.  error


state 87
	iteration_statement:  DO.statement WHILE '(' expression ')' ';' 

	IDENTIFIER  shift 79
	CONSTANT  shift 111
	STRING_LITERAL  shift 112
	SIZEOF  shift 101
	INC_OP  shift 98
	DEC_OP  shift 99
	CASE  shift 80
	DEFAULT  shift 81
	IF  shift 84
	SWITCH  shift 85
	WHILE  shift 86
	DO  shift 87
	FOR  shift 88
	GOTO  shift 89
	CONTINUE  shift 90
	BREAK  shift 91
	RETURN  shift 92
	'('  shift 113
	'&'  shift 104
	'*'  shift 105
	'+'  shift 106
	'-'  shift 107
	'~'  shift 108
	'!'  shift 109
	';'  shift 82
	'{'  shift 46
	.  error

	primary_expression  goto 103
	expression  goto 83
	postfix_expression  goto 97
	assignment_expression  goto 93
	unary_expression  goto 95
	unary_operator  goto 100
	cast_expression  goto 121
	multiplicative_expression  goto 120
	additive_expression  goto 119
	shift_expression  goto 118
	relational_expression  goto 117
	equality_expression  goto 116
	and_expression  goto 115
	exclusive_or_expression  goto 114
	inclusive_or_expression  goto 110
	logical_and_expression  goto 102
	logical_or_expression  goto 96
	conditional_expression  goto 94
	statement  goto 165
	labeled_statement  goto 73
	compound_statement  goto 74
	expression_statement  goto 75
	selection_statement  goto 76
	iteration_statement  goto 77
	jump_statement  goto 78

state 88
	iteration_statement:  FOR.'(' expression_statement expression_statement ')' statement 
	iteration_statement:  FOR.'(' expression_statement expression_statement expression ')' statement 

	'('  shift 166
	.  error


state 89
	jump_statement:  GOTO.IDENTIFIER ';' 

	IDENTIFIER  shift 167
	.  error


state 90
	jump_statement:  CONTINUE.';' 

	';'  shift 168
	.  error


state 91
	jump_statement:  BREAK.';' 

	';'  shift 169
	.  error


state 92
	jump_statement:  RETURN.';' 
	jump_statement:  RETURN.expression ';' 

	IDENTIFIER  shift 127
	CONSTANT  shift 111
	STRING_LITERAL  shift 112
	SIZEOF  shift 101
	INC_OP  shift 98
	DEC_OP  shift 99
	'('  shift 113
	'&'  shift 104
	'*'  shift 105
	'+'  shift 106
	'-'  shift 107
	'~'  shift 108
	'!'  shift 109
	';'  shift 170
	.  error

	primary_expression  goto 103
	expression  goto 171
	postfix_expression  goto 97
	assignment_expression  goto 93
	unary_expression  goto 95
	unary_operator  goto 100
	cast_expression  goto 121
	multiplicative_expression  goto 120
	additive_expression  goto 119
	shift_expression  goto 118
	relational_expression  goto 117
	equality_expression  goto 116
	and_expression  goto 115
	exclusive_or_expression  goto 114
	inclusive_or_expression  goto 110
	logical_and_expression  goto 102
	logical_or_expression  goto 96
	conditional_expression  goto 94

state 93
	expression:  assignment_expression.    (72)

	.  reduce 72 (src line 151)


state 94
	assignment_expression:  conditional_expression.    (59)

	.  reduce 59 (src line 132)


state 95
	cast_expression:  unary_expression.    (27)
	assignment_expression:  unary_expression.assignment_operator assignment_expression 

	MUL_ASSIGN  shift 174
	DIV_ASSIGN  shift 175
	MOD_ASSIGN  shift 176
	ADD_ASSIGN  shift 177
	SUB_ASSIGN  shift 178
	LEFT_ASSIGN  shift 179
	RIGHT_ASSIGN  shift 180
	AND_ASSIGN  shift 181
	XOR_ASSIGN  shift 182
	OR_ASSIGN  shift 183
	'='  shift 173
	.  reduce 27 (src line 64)

	assignment_operator  goto 172
